# MyFinansialAssistant

./: cbr_lib.py  main.py  pyproject.toml  tinkoff_client.py
backend/: .gitignore  cbr_lib.py  exception_logger.py  grpc_pb_generating.md  main.py  pyproject.toml  tinkoff_client.py
backend/contracts/: marketdata.proto  operations.proto  sandbox.proto  stoporders.proto  users.proto
backend/grpc_pb2/: common_pb2.py  instruments_pb2.py  instruments_pb2_grpc.py  marketdata_pb2.py  marketdata_pb2_grpc.py  operations_pb2.py  operations_pb2_grpc.py  orders_pb2.py  orders_pb2_grpc.py  sandbox_pb2.py  sandbox_pb2_grpc.py  stoporders_pb2.py  stoporders_pb2_grpc.py  users_pb2.py  users_pb2_grpc.py
backend/schemas/: tinkoff_accounts_schema.py  tinkoff_instruments_schema.py  tinkoff_operations_schema.py
schemas/: tinkoff_accounts_schema.py  tinkoff_instruments_schema.py  tinkoff_operations_schema.py
