[tool.poetry]
name = "myfinansialassistant"
version = "0.1.0"
description = ""
authors = ["Victor Kozlov <vick23@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = { extras = ["standard"], version = "^0.18.3" }
grpcio = "^1.49.0"
grpcio-tools = "^1.49.0"
python-dotenv = "^0.21.0"
aiohttp = "^3.8.1"
aioredis = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
